Fixed styling and added dark mode

--- a/src/components/layout/mainLayout/mainLayout.module.css
+++ b/src/components/layout/mainLayout/mainLayout.module.css
@@ -4,6 +4,6 @@
 }
 @media only screen and (min-width: 900px) {
   .children_container {
-    margin-left: 340px;
+    margin-left: 300px;
   }
 }
